fix: change description on mobile

--- a/src/app/project/projects/project-item/project-item.component.scss
+++ b/src/app/project/projects/project-item/project-item.component.scss
@@ -30,14 +30,21 @@ img{
   font-size: 3rem;
 }
 
+@media only screen and (max-width: 425px) {
+  .title{
+    text-align: center;
+    font-size: 1.5rem;
+  }
+}
+
 
 @media only screen and (max-width: 768px) {
 
   .row{
     display: block;
   }
-
-  .title{
+  .title {
     text-align: center;
   }
+
 }
